common.css
/*モバイルに共通のスタイル*/
p,
ul,
footer {
    font-size: 14px;
    font-weight: 300;
    padding: 0 20px 0 22px;
    margin: 0 auto 20px;
}

li {
    list-style: none;
}

/*ここから個別のスタイル*/

html {
    background-color: RGB(101, 101, 101);
}

body {
    font-family: sans-serif;
    max-width: 720px;
    background-color: white;
    color: RGB(81, 81, 81);
    margin: 0 auto;
    -webkit-text-size-adjust: 100%;
}

a {
    color: rgb(119, 185, 208);
    text-decoration: none;
    font-weight: bold;
}

nav ul {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    width: 100%;
    padding: 0;
    margin-bottom: 0;
    border-bottom: 2px solid #bcbcbc;
}

nav ul li {
    font-weight: 600;
    font-size: 14px;
    color: RGB(102, 171, 197);
    margin: 8px 5px 5px 20px;
    list-style: none;
}

nav ul li a {
    color: RGB(121, 121, 121);
}

hr {
    width: 100%;
    background-color: #bcbcbc;
    height: 2px;
    border: none;
}

h1 {
    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial';
    font-size: 30px;
    font-weight: 300;
    color: RGB(121, 121, 121);
    margin: 18px 16px 16px 16px;
}

h2 {
    display: block;
    width: 100%;
    font-size: 16px;
    font-weight: 600;
    margin: 16px 16px 0 16px;
}

.topimg {
    width: 100%;
}

.hotnews {
    list-style: none;
    margin: 0 auto 20px;
}


/*Recordings ページの埋め込み*/
iframe.movie {
    display: block;
    margin: 10px auto;
    width: 87.5%;
}

/*Photography ページの埋め込み*/
iframe.photo {
    display: block;
    width: 87.5%;
    height: 200px;
    margin: 5px auto;
}

.historyBox > p {
    margin-top: 20px;
}

#members {
    margin-top: 4px;
}

#members ul {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 0;
}

#members li {
    font-size: 13px;
    flex-basis: 115px;
    margin: 4px 0 0 0;
}

#members a {
    font-weight: normal;
    color: RGB(81, 81, 81);
    text-decoration: underline;
}

.memberVerticalGroup {
    display: block;
    width: 100%;
}

/*Members ページの凡例*/
h3#notes {
    font-size: 15px;
    font-weight: 300;
    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial';
    padding-left: 22px;
}

img {
    display: block;
    width: 100%;
    margin: 0 auto;
}

footer {
    padding: 16px 10px 16px;
    margin-top: 16px;
    margin-bottom: 0;
    text-align: center;
    border-top: 2px solid #bcbcbc;
}

img#his {
    margin: 5px auto;
}

/*メニューのレスポンシブ*/
@media screen and (min-width:500px) {
    nav ul {
        justify-content: flex-end;
    }

    nav ul li:last-of-type {
        margin-right: 25px;
    }
}

/*以下、PC用レイアウト*/
@media screen and (min-width:900px) {

    /*PCに共通のスタイル*/
    p,
    ul {
        font-size: 13px;
    }

    body {
        max-width: 900px;
    }

    h1 {
        font-size: 36px;
        margin: 18px 0 16px 36px;
    }

    h2 {
        font-size: 18px;
        padding: 0.7em 0 0.4em 30px;
        margin: 0;
    }

    p {
        font-size: 13px;
        padding: 0 40px;
        margin: 0 auto 0.2em;
    }

    .topimg {
        display: block;
        max-width: 840px;
        margin: 0 auto;
        border: solid 10px RGB(193, 193, 193);
    }

    .hotnews {
        height: 210px;
        width: 790px;
        overflow-y: scroll;
        border: solid 2px RGB(193, 193, 193);
        margin: 0 0 0.7em 40px;
        padding: 10px;
    }

    /*Recordings ページの埋め込み*/
    iframe.movie {
        width: 410px;
        height: 230px;
        margin: 10px 20px;
    }

    .recording-group {
        display: flex;
        flex-wrap: wrap;
    }

    /*Photography ページの埋め込み*/
    iframe.photo {
        display: block;
        width: 800px;
        height: 534px;
        margin: 5px auto;
    }

    #history {
        display: flex;
        flex-wrap: wrap;
    }

    .historyBox {
        height: auto;
        width: 270px;
        margin: 0 10px 30px 10px;
        padding: 0px 5px;
    }

    .historyBox > h2 {
        text-align: center;
        padding: 0 0 0.4em;
    }

    .historyBox > img {
        display: block;
        margin: 0 auto;
        width: 250px;
        height: auto;
    }

    .historyBox > p {
        width: auto;
        padding: 10px 20px;
        margin: 0;
    }

    .historySeparator {
        display: none;
    }

    /*Members*/
    #members {
        display: flex;
        justify-content: space-between;
        padding: 0 30px;
    }


    /*Members ページの縦枠*/
    #memberVerticalGroup {
        width: 180px;
    }

    div > h2 {
        font-size: 15px;
        padding: 1em 0 0 1em;
        margin-bottom: -0.3em;
    }

    /*Members ページの凡例*/
    h3#notes {
        position: absolute;
        top: 40px;
        right: 30px;
        font-weight: 300;
        font-size: 19px;
        font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial';
    }

    img {
        margin: 0 auto;
        width: auto;
    }

    footer {
        padding-right: 30px;
        margin-bottom: 0;
        text-align: right;
    }
}

